<resources>
    <string name="app_name">MilanaMid2</string>
    <string name="search_people_and_messages">Search people and messages</string>
    <string name="messages">Messages</string>
    <string name="groups">Groups</string>
    <string name="pods">Pods</string>
    <string name="direct">Direct</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_two">TwoActivity</string>
</resources>