<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="110dp"
            android:text="@string/direct"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:text="@string/pods"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="40dp"
            android:text="@string/groups"
            android:textSize="17sp"
            android:textStyle="bold" />


    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        app:cardCornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="56dp"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/strelka" />

        <Button
            android:layout_width="410dp"
            android:layout_height="80dp"
            android:background="#A9109F18"
            android:text="@string/messages"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="35sp" />


    </androidx.cardview.widget.CardView>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/costom_list"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">


    </androidx.recyclerview.widget.RecyclerView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        app:cardCornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:layout_width="320dp"
            android:layout_height="37dp"
            android:background="#3E676666"
            android:gravity="center"
            android:hint="@string/search_people_and_messages"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="39dp"
            android:layout_height="25dp"
            android:layout_marginTop="5dp"
            app:srcCompat="@drawable/search" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:cardCornerRadius="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="450dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="50dp"
            android:layout_height="45dp"
            android:background="#43BA48"
            app:srcCompat="@drawable/pen" />

    </androidx.cardview.widget.CardView>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu">

    </com.google.android.material.bottomnavigation.BottomNavigationView>



</androidx.constraintlayout.widget.ConstraintLayout>

